--- a/02_HTMLとCSSを極める（トランジション編）/040_transformについて学ぼう/start/style.css
+++ b/02_HTMLとCSSを極める（トランジション編）/040_transformについて学ぼう/start/style.css
@@ -3,5 +3,10 @@
   height: 100px;
   margin: 0 auto;
   background-color: orangered;
+  top: left;
+  -webkit-transform: translateX(50px) scaleY(2);
+          transform: translateX(50px) scaleY(2);
+  -webkit-transform-origin: center center;
+          transform-origin: center center;
 }
 /*# sourceMappingURL=style.css.map */
