--- a/03_HTMLとCSSを極める（アニメーション編）/020_アニメーションとキーフレーム/start/loader.css
+++ b/03_HTMLとCSSを極める（アニメーション編）/020_アニメーションとキーフレーム/start/loader.css
@@ -9,25 +9,34 @@ body {
   background-color: black;
   -webkit-animation: sk-bouncedelay 1.4s;
           animation: sk-bouncedelay 1.4s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-iteration-count: 3;
+          animation-iteration-count: 3;
+}
+
+.paused {
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
 }
 
 @-webkit-keyframes sk-bouncedelay {
-  from {
+  0% {
     -webkit-transform: scale(0);
             transform: scale(0);
   }
-  to {
+  100% {
     -webkit-transform: scale(1);
             transform: scale(1);
   }
 }
 
 @keyframes sk-bouncedelay {
-  from {
+  0% {
     -webkit-transform: scale(0);
             transform: scale(0);
   }
-  to {
+  100% {
     -webkit-transform: scale(1);
             transform: scale(1);
   }
