--- a/03_HTMLとCSSを極める（アニメーション編）/020_アニメーションとキーフレーム/start/loader.scss
+++ b/03_HTMLとCSSを極める（アニメーション編）/020_アニメーションとキーフレーム/start/loader.scss
@@ -10,14 +10,23 @@ body {
   height: 100px;
   background-color: $cBlack;
   animation: sk-bouncedelay 1.4s;
+  animation-timing-function: ease;
+  // animation-delay: 3s;
+  animation-iteration-count: 3;
+  // animation-direction: alternate-reverse;
+  // animation-fill-mode: forwards;
+  // transform: scale(0);
+}
+.paused {
+  animation-play-state: paused;
 }
 
 @keyframes sk-bouncedelay {
-  from {
+  0% {
     transform: scale(0);
   }
 
-  to {
+  100% {
     transform: scale(1);
   }
 }
