--- a/03_HTMLとCSSを極める（アニメーション編）/060_演習_色んなローダーを作ってみよう/try.scss
+++ b/03_HTMLとCSSを極める（アニメーション編）/060_演習_色んなローダーを作ってみよう/try.scss
@@ -2,5 +2,48 @@
 
 .try {
   /** ここに記述しよう */
-  
-}
+    .spinner{
+      width: 40px;
+      height: 40px;
+      background-color: #333;
+      margin: 100px auto;
+
+      @include animation(
+        $name: sk-rotateplane,
+        $duration: 1.2s,
+        $iteration-count: infinite,
+        $timing-function: ease-in-out
+        );
+    }
+
+    @keyframes  sk-rotateplane2,{
+      0% {
+        transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+      }
+
+      50% {
+        transform: perspective(120px) rotateX(-180deg) rotateY(0deg);
+      }
+
+      100% {
+        transform: perspective(120px) rotateX(-180deg) rotateY(-180deg);
+      }
+    }
+    
+    .double-spinner{
+      width: 40px;
+      height: 40px;
+      position: relative;
+      margin: 100px auto;
+    }
+    
+    .rect-spinner{
+      margin: 100px auto;
+      width: 50px;
+      height: 40px;
+      text-align: center;
+      letter-spacing: -2px;
+    }
+    
+  }
+    
