--- a/04_JavaScriptの基礎を固める/116_クラス継承でコードの再利用！/start/style.scss
+++ b/04_JavaScriptの基礎を固める/116_クラス継承でコードの再利用！/start/style.scss
@@ -15,7 +15,7 @@ body {
 }
 
 .animate-title,
-.animate-title-2 {
+.tween-animate-title {
   // position: absolute;
   // top: 50%;
   // left: 50%;
@@ -29,8 +29,16 @@ body {
 
     & .char {
       display: inline-block;
+    }
+  }
 
-      @include animation(
+  & .char {
+    opacity: 0;
+  }
+}
+
+.animate-title.inview.char{
+  @include animation(
         $name: kf-animate-chars,
         $duration: 0.5s,
         $timing-function: cubic-bezier(0.39, 1.57, 0.58, 1),
@@ -42,8 +50,6 @@ body {
               animation-delay: $i * 0.04s;
           }
       }
-    }
-  }
 }
 
 @keyframes kf-animate-chars {
